--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -142,13 +142,13 @@ zh:
         detail: 热量还有 iPhone 和 iPad 版本的应用，在两个设备上使用会很方便。
   workout_iphone:
     title: 训练 - 训练计时器 - Wuhoo
-    description: 训练是一款 iOS 应用，训练计时器。
+    description: Wuhoo 训练是一款 iPhone 应用，创建训练计时器，让它帮助你做锻炼。
     icon:
-      alt: 训练 iPhone 版应用图标
+      alt: Wuhoo 训练 iPhone 版应用图标
     name: 训练
     device: iPhone 版
     screenshot:
-      alt: 训练 iPhone 版应用截图
+      alt: Wuhoo 训练 iPhone 版应用截图
       src: zh-workout-iphone-screenshot.png
     download: 免费下载
     buy: 在 App Store 上购买 - Wuhoo 训练
