change language switch icon

--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -53,6 +53,7 @@ zh:
       title: Twitter
       description: 关注官方账号，了解动向，反馈问题
   language:
+    icon: usd
     name: English
     title: Switch to English
   calorie_ios:
