--- a/locales/en.yml
+++ b/locales/en.yml
@@ -53,6 +53,7 @@ en:
       title: Twitter
       description: Follow official account. Happy to help you out.
   language:
+    icon: cny
     name: 简体中文
     title: 切换到中文
   calorie_ios:
