fix typing mistake

--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -34,7 +34,7 @@ zh:
       device: iPhone 版
     scientific7_iphone:
       name: 科学 7 分钟
-      device: for iPhone
+      device: iPhone 版
     advance7_iphone:
       name: 高级 7 分钟
       device: iPhone 版
