--- a/locales/en.yml
+++ b/locales/en.yml
@@ -43,7 +43,7 @@ en:
       device: for iPhone
     walk_iphone:
       name: Walk
-      device: for iPhone
+      device: Comming Soon
   guides:
     name: Guides
     title: Guides - Wuhoo
