--- a/locales/zh.yml
+++ b/locales/zh.yml
@@ -43,7 +43,7 @@ zh:
       device: iPhone 版
     walk_iphone:
       name: 走路
-      device: iPhone 版
+      device: 即将上线
   guides:
     name: 帮助文档
     title: 帮助文档 - Wuhoo
